@@ -42,7 +42,7 @@ class TestRecognition(unittest.TestCase):
     
     def test_disabling_unicode(self):
         hoge = u'\u30c6\u30b9\u30c8' # the word test in Japanese
-        hoge_enc = urllib.quote_plus(hoge.encode('utf-8'))
+        hoge_enc = urllib.quote(hoge.encode('utf-8'))
         m = Mapper()
         m.encoding = None
         m.connect(':hoge')
