@@ -2,6 +2,7 @@ Routes Changelog
 ========================
 
 -- 1.9 (**tip**)
+* Fixed Routes to not use quote_plus when making URL's.
 * WARNING: Mapper now comes with hardcode_names set to True by default. This
   means routes generated by name must work for the URL.
 * Actually respect having urlcache disabled.
